A small refactor of classes was made, new sections were added (advantages, questions and answers)

--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
@@ -8,6 +8,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/recycled/buttons.css">
+  <link rel="stylesheet" href="/css/recycled/lines.css">
+  <link rel="stylesheet" href="/css/recycled/text-sizes.css">
   <title>EWA</title>
 </head>
 <body>
@@ -16,12 +19,8 @@
       <nav class="navbar">
         <ul class="nav justify-content-center align-items-center">
           <li class="nav-item">
-            <a class="nav-link s-translucent-text" href="#">
-              <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" clip-rule="evenodd"
-                  d="M27.86 19.6L29.75 19.6C31.6286 19.6 33.388 20.1104 34.8971 21C33.388 21.8896 31.6286 22.4 29.75 22.4L27.86 22.4C27.9518 21.9476 28 21.4795 28 21C28 20.5205 27.9518 20.0524 27.86 19.6ZM27.0635 17.5L29.75 17.5C32.3272 17.5 34.7185 18.2959 36.6916 19.6552C38.6663 17.8034 39.9 15.1708 39.9 12.25C39.9 6.64431 35.3557 2.1 29.75 2.1L12.25 2.1C6.64431 2.1 2.1 6.64431 2.1 12.25C2.1 15.1708 3.33369 17.8034 5.3084 19.6552C7.28148 18.2959 9.6728 17.5 12.25 17.5L14.9365 17.5C16.1468 15.4077 18.409 14 21 14C23.591 14 25.8532 15.4077 27.0635 17.5ZM14.14 19.6L12.25 19.6C10.3714 19.6 8.612 20.1104 7.10289 21C8.612 21.8896 10.3714 22.4 12.25 22.4L14.14 22.4C14.0482 21.9476 14 21.4795 14 21C14 20.5205 14.0482 20.0524 14.14 19.6ZM16.3023 22.4L25.6977 22.4C25.8292 21.9575 25.9 21.4879 25.9 21C25.9 18.2938 23.7062 16.1 21 16.1C18.2938 16.1 16.1 18.2938 16.1 21C16.1 21.4879 16.1708 21.9575 16.3023 22.4ZM14.9365 24.5L12.25 24.5C9.6728 24.5 7.28147 23.7041 5.3084 22.3448C3.33369 24.1966 2.1 26.8292 2.1 29.75C2.1 35.3557 6.64431 39.9 12.25 39.9L29.75 39.9C35.3557 39.9 39.9 35.3557 39.9 29.75C39.9 26.8292 38.6663 24.1966 36.6916 22.3448C34.7185 23.7041 32.3272 24.5 29.75 24.5L27.0635 24.5L14.9365 24.5ZM42 29.75C42 26.3223 40.5922 23.2234 38.3232 21C40.5922 18.7766 42 15.6777 42 12.25C42 5.48451 36.5155 -1.59614e-06 29.75 -1.30041e-06L12.25 -5.35465e-07C5.48451 -2.39736e-07 -1.59614e-06 5.48451 -1.30041e-06 12.25C-1.15058e-06 15.6777 1.40782 18.7766 3.67678 21C1.40782 23.2234 -6.85294e-07 26.3223 -5.35465e-07 29.75C-2.39736e-07 36.5155 5.48451 42 12.25 42L29.75 42C36.5155 42 42 36.5155 42 29.75Z"
-                  fill="#55A5FF" />
-              </svg>
+            <a class="nav-link s-text" href="#">
+              <img src="/img/icon.svg" alt="icon">
             </a>
           </li>
           <li class="nav-item">
@@ -30,101 +29,251 @@
         </ul>
         <ul class="nav justify-content-center align-items-center">
           <li class="nav-item">
-            <a class="nav-link" href="#">Как это работает</a>
+            <a class="nav-link" href="#works">Как это работает</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Преимущества</a>
+            <a class="nav-link" href="#benefits">Преимущества</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Вопросы и ответы</a>
+            <a class="nav-link" href="#q-and-a">Вопросы и ответы</a>
           </li>
         </ul>
-        <div class="sign-in">
-          <button type="button" class="btn btn-green">Войти</button>
-        </div>
+        <button class="btn btn-green" type="button">Войти</button>
       </nav>
     </div>
   </header>
   <main>
-    <section class="salary section">
+    <section class="salary" id="salary">
       <div class="container">
         <div class="row">
           <div class="col justify-content-start">
-            <div class="about-project">
-              <h1 class="project-name">Зарплата каждый день</h1>
-              <div class="about-project-text sm-text">Первый сервис в Украине, с которым сотрудники могут получать
+            <div class="salary__about">
+              <h1 class="salary__name">Зарплата каждый день</h1>
+              <div class="m-text">Первый сервис в Украине, с которым сотрудники могут получать
                 зарплату в
                 любом
                 месте и в любое время.
               </div>
             </div>
             <button class="btn btn-green">Войти</button>
-            <div class="visa d-flex">
-              <div class="about-visa-text s-translucent-text">Сервис создан при поддержке
+            <div class="salary__visa d-flex">
+              <div class="salary__visa-text d-flex align-items-center s-text">Сервис создан при поддержке
               </div>
               <img src="/img/visa-logo.svg" alt="visa-logo">
             </div>
           </div>
-          <div class="col justify-content-end">
-            <img src="/img/about-project-image.svg" alt="about-project-image">
-          </div>
+          <img src="/img/about-project-image.svg" alt="about-project-image" class="col justify-content-end">
         </div>
       </div>
     </section>
-    <section class="how-it-work section">
+    <section class="works" id="works">
       <div class="container">
-        <div class="d-flex flex-column align-items-center">
-          <h3 class="how-it-work-title">Как это работает</h3>
-          <div class="how-it-work-text sm-text">Больше не нужно долго ждать Дня Зарплаты. Теперь можно получать <br>
+        <div class="works__title d-flex flex-column align-items-center">
+          <h3 class="xl-text">Как это работает</h3>
+          <div class="m-text text-center">Больше не нужно долго ждать Дня Зарплаты. Теперь можно получать <br>
             зарплату
             каждый
             день. Легко и быстро!
           </div>
         </div>
         <div class="row">
-          <div class="col justify-content-start">
-            <div class="rounded-container">
-              <div class="cash-out-container">
-                <div class="cash-out-text-container d-flex">
-                  <div class="cash-out-card">
-                    <img src="/img/card.svg" alt="card">
-                  </div>
-                  <div class="cash-out ms-2">
-                    <div class="cash-out-text mb-1">Снять деньги</div>
-                    <div class="cash-out-subtext s-translucent-text">Снимайте доступные деньги</div>
-                  </div>
+          <div class="works__rounded col justify-content-start">
+            <div class="cash-out">
+              <div class="d-flex">
+                <img src="/img/card.svg" alt="card">
+                <div class="ms-2">
+                  <div class="cash-out__text mb-1">Снять деньги</div>
+                  <div class="s-text">Снимайте доступные деньги</div>
                 </div>
-                <div class="dashed-line"></div>
-                <div class="available-funds-container">
-                  <div class="available-funds-text mb-3">12 000 <img src="/img/UAH.svg" alt="UAH" class="mx-auto"></div>
-                  <div class="available-funds-subtext s-translucent-text">Доступные средства для снятия</div>
-                </div>
-                <button type="button" class="btn btn-green bth-cash-out">Снять деньги</button>
               </div>
-              <div class="cash-out-man">
-                <img src="/img/cash-out-man.svg" alt="cash-out-man">
+              <div class="dashed-line"></div>
+              <div class="cash-out__funds">
+                <div class="cash-out__funds-text mb-3">12 000 <img src="/img/UAH.svg" alt="UAH" class="mx-auto"></div>
+                <div class="s-text">Доступные средства для снятия</div>
+              </div>
+              <button class="cash-out__btn btn btn-green" type="button">Снять деньги</button>
+            </div>
+            <img class="works__cash-out-man" src="/img/cash-out-man.svg" alt="cash-out-man">
+          </div>
+          <div class="col justify-content-end">
+            <div class="output d-flex flex-row">
+              <div class="vertical-line"></div>
+              <div class="output__inner">
+                <img src="/img/card.svg" alt="output-salary-card">
+                <div class="ml-text">Выводите зарплату</div>
+                <div class="m-text">Не ждите даты выдачи зарплаты, теперь вы можете ее получать в любой день! Выводить
+                  зарплату можно на ваш IBAN счет, или на любую карту.
+                </div>
+              </div>
+            </div>
+            <div class="statistic d-flex flex-row">
+              <div class="vertical-line"></div>
+              <div class="statistic__inner">
+                <img src="/img/statistic.svg" alt="statistic">
+                <div class="ml-text">Доступ к статистике</div>
+                <div class="m-text">Каждый день вы получаете обновленную статистику по вашей
+                  зарплате.
+                </div>
               </div>
             </div>
           </div>
-          <div class="col justify-content-end">
-            <div class="output-salary-container d-flex flex-row">
-              <div class="vertical-line"></div>
-              <div class="output-salary">
-                <img src="/img/card.svg" alt="output-salary-card">
-                <div class="output-salary-text m-text">Выводите зарплату</div>
-                <div class="output-salary-subtext sm-text">Не ждите даты выдачи зарплаты, теперь вы можете ее
-                  получать в любой
-                  день! Выводить зарплату можно на ваш IBAN счет, или на любую карту.
+        </div>
+      </div>
+    </section>
+    <section class="benefits" id="benefits">
+      <div class="container">
+        <div class="d-flex flex-column align-items-center">
+          <h3 class="xl-text">Преимущества сервиса</h3>
+          <div class="m-text text-center">Первый сервис в Украине, с которым сотрудники могут получить <br>
+            заработанную зарплату в любой удобный день.
+          </div>
+        </div>
+        <div class="benefits__target d-flex justify-content-center">
+          <div class="benefits__target-employees">
+            <div class="m-text">Для сотрудника</div>
+            <div class="horizontal-line"></div>
+          </div>
+          <div class="benefits__target-employer">
+            <div class="m-text">Для работодателя</div>
+            <div class="horizontal-line"></div>
+          </div>
+        </div>
+        <div class="benefits__cards d-flex">
+          <div class="row flex flex-row gap-3">
+            <div class="col">
+              <div class="card-border benefits__credit-card card h-100 text-center">
+                <div class="card-body">
+                  <img src="/img/card.svg" alt="card">
+                  <h5 class="card-title ml-text">Доступ к деньгам</h5>
+                  <p class="card-text m-text">Вы можете просматривать свой доступный баланс на зарплатном счету и
+                    перевести
+                    необходимую сумму на свою карту</p>
                 </div>
               </div>
             </div>
-            <div class="statistic-container d-flex flex-row">
-              <div class="vertical-line"></div>
-              <div class="statistic">
-                <img src="/img/statistic.svg" alt="statistic">
-                <div class="statistic-text m-text">Доступ к статистике</div>
-                <div class="statistic-subtext sm-text">Каждый день вы получаете обновленную статистику по вашей
-                  зарплате.
+            <div class="col">
+              <div class="card-border benefits__statistic card h-100 text-center">
+                <div class="card-body">
+                  <img src="/img/statistic-red.svg" alt="statistic-red">
+                  <h5 class="card-title ml-text">Статистика дохода</h5>
+                  <p class="card-text m-text">Детальная статистика начислений зарплаты и снятия средств позволяет
+                    понимать
+                    свои финансовые потоки</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card-border benefits__check card h-100 text-center">
+                <div class="card-body">
+                  <img src="/img/check.svg" alt="check">
+                  <h5 class="card-title ml-text">Доступ везде и всегда</h5>
+                  <p class="card-text m-text">“Зарплата каждый день” - это онлайн сервис. Вам необходимо только
+                    подключение
+                    к интернету, компьютер или смартфон</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="joining d-flex flex-column justify-content-center mt-4">
+          <div class="mx-auto text-center">
+            <button class="btn btn-blue">Ваша компания еще не подключена?
+            </button>
+            <div class="l-text">Ускорьте процесс подключения вашей <br> компании к сервису "Зарплата каждый
+              день"
+            </div>
+            <button class="joining__btn btn btn-dark">Оставить заявку</button>
+            <p class="s-text">Уже более 8 000 сотрудников оставили заявку</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="q-and-a" id="q-and-a">
+      <div class="container">
+        <div class="d-flex flex-column align-items-center">
+          <h3 class="xl-text">Вопросы и ответы</h3>
+          <div class="accordion w-100" id="accordion">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingOne">
+                <button class="accordion-button sm-text" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseOne"
+                  aria-expanded="true" aria-controls="collapseOne">
+                  Что требуется для подключения?
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body m-text">
+                  Какой-то текст про то что требуется для подключения.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingTwo">
+                <button class="accordion-button collapsed sm-text" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  ООО ФК "УНИВЕРСАЛЬНЫЕ ПЛАТЕЖНЫЕ СИСТЕМЫ"
+                </button>
+              </h2>
+              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body m-text">
+                  ФК ТОВ «УНІВЕРСАЛЬНІ ПЛАТІЖНІ РІШЕННЯ» - фінансова установа, зареєстрована У встановленому
+                  законодавством України порядку, яка надає послуги на підставі Ліцензії НБУ (№ 3 від 11.11.2013 року)
+                  на переказ грошових коштів.Також ФК ТОВ «УНІВЕРСАЛЬНІ ПЛАТІЖНІ РІШЕННЯ» приєдналася до
+                  Внутрішньодержавної небанківської платіжної системи «Фінансовий світ» (договір №14 від 11.12.2013
+                  року) та до Міжнародної системи грошових переказів «АVERS» (договір № 126/2014 від 06.10.2014 року).
+                  <div>
+                    <img src="/img/certificate.png" alt="certificate">
+                    <img src="/img/license.png" alt="license">
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="headingThree">
+                <button class="accordion-button collapsed sm-text" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  Как работает онлайн сервис “Зарплата каждый день”
+                </button>
+              </h2>
+              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body m-text">
+                  Какой-то текст про то как работает онлайн сервис “Зарплата каждый день”
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="q-and-a__email sm-text">Если у вас остались вопросы пишите нам <a class="no-underline"
+            href="mailto:help@ewa.com">help@ewa.com</a>
+          </div>
+          <div class="text-center m-3">
+            <div class="xl-text">Узнайте больше</div>
+            <div class="m-text">Задавайте любые вопросы нашим специалистам <br> удобным для вас способом</div>
+          </div>
+          <div class="row flex flex-row gap-3">
+            <div class="col">
+              <div class="card-border card-telegram card h-100 text-center">
+                <div class="card-body">
+                  <img class="q-and-a__img" src="/img/telegram.svg" alt="telegram">
+                  <h5 class="card-text m-text">Telegram</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card-border card-viber card h-100 text-center">
+                <div class="card-body">
+                  <img class="q-and-a__img" src="/img/viber.svg" alt="viber">
+                  <h5 class="card-text m-text">Viber</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card-border card-facebook card h-100 text-center">
+                <div class="card-body">
+                  <img class="q-and-a__img" src="/img/facebook.svg" alt="facebook">
+                  <h5 class="card-text m-text">Facebook</h5>
                 </div>
               </div>
             </div>
