Added contacts and refactored tags with texts

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <link rel="stylesheet" href="/css/recycled/text-sizes.css">
   <title>EWA</title>
 </head>
+
 <body>
+
   <header class="header">
     <div class="container">
       <nav class="navbar">
@@ -42,22 +44,23 @@
       </nav>
     </div>
   </header>
+
   <main>
     <section class="salary" id="salary">
       <div class="container">
         <div class="row">
           <div class="col justify-content-start">
             <div class="salary__about">
-              <h1 class="salary__name">Зарплата каждый день</h1>
-              <div class="m-text">Первый сервис в Украине, с которым сотрудники могут получать
+              <h1 class="salary__name">Зарплата <br> каждый день</h1>
+              <p class="m-text">Первый сервис в Украине, с которым сотрудники могут получать
                 зарплату в
                 любом
                 месте и в любое время.
-              </div>
+              </p>
             </div>
             <button class="btn btn-green">Войти</button>
             <div class="salary__visa d-flex">
-              <div class="salary__visa-text d-flex align-items-center s-text">Сервис создан при поддержке
+              <div class="salary__visa-text s-text d-flex align-items-center">Сервис создан при поддержке
               </div>
               <img src="/img/visa-logo.svg" alt="visa-logo">
             </div>
@@ -66,15 +69,16 @@
         </div>
       </div>
     </section>
+
     <section class="works" id="works">
       <div class="container">
         <div class="works__title d-flex flex-column align-items-center">
-          <h3 class="xl-text">Как это работает</h3>
-          <div class="m-text text-center">Больше не нужно долго ждать Дня Зарплаты. Теперь можно получать <br>
+          <h2 class="xl-text">Как это работает</h2>
+          <p class="m-text text-center">Больше не нужно долго ждать Дня Зарплаты. Теперь можно получать <br>
             зарплату
             каждый
             день. Легко и быстро!
-          </div>
+          </p>
         </div>
         <div class="row">
           <div class="works__rounded col justify-content-start">
@@ -83,13 +87,13 @@
                 <img src="/img/card.svg" alt="card">
                 <div class="ms-2">
                   <div class="cash-out__text mb-1">Снять деньги</div>
-                  <div class="s-text">Снимайте доступные деньги</div>
+                  <h6 class="s-text">Снимайте доступные деньги</h6>
                 </div>
               </div>
               <div class="dashed-line"></div>
               <div class="cash-out__funds">
                 <div class="cash-out__funds-text mb-3">12 000 <img src="/img/UAH.svg" alt="UAH" class="mx-auto"></div>
-                <div class="s-text">Доступные средства для снятия</div>
+                <h6 class="s-text">Доступные средства для снятия</h6>
               </div>
               <button class="cash-out__btn btn btn-green" type="button">Снять деньги</button>
             </div>
@@ -100,41 +104,42 @@
               <div class="vertical-line"></div>
               <div class="output__inner">
                 <img src="/img/card.svg" alt="output-salary-card">
-                <div class="ml-text">Выводите зарплату</div>
-                <div class="m-text">Не ждите даты выдачи зарплаты, теперь вы можете ее получать в любой день! Выводить
+                <h4 class="ml-text">Выводите зарплату</h4>
+                <p class="m-text">Не ждите даты выдачи зарплаты, теперь вы можете ее получать в любой день! Выводить
                   зарплату можно на ваш IBAN счет, или на любую карту.
-                </div>
+                </p>
               </div>
             </div>
             <div class="statistic d-flex flex-row">
               <div class="vertical-line"></div>
               <div class="statistic__inner">
                 <img src="/img/statistic.svg" alt="statistic">
-                <div class="ml-text">Доступ к статистике</div>
-                <div class="m-text">Каждый день вы получаете обновленную статистику по вашей
+                <h4 class="ml-text">Доступ к статистике</h4>
+                <p class="m-text">Каждый день вы получаете обновленную статистику по вашей
                   зарплате.
-                </div>
+                </p>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
+
     <section class="benefits" id="benefits">
       <div class="container">
-        <div class="d-flex flex-column align-items-center">
-          <h3 class="xl-text">Преимущества сервиса</h3>
-          <div class="m-text text-center">Первый сервис в Украине, с которым сотрудники могут получить <br>
+        <div class="d-flex flex-column align-items-center text-center">
+          <h2 class="xl-text">Преимущества сервиса</h2>
+          <p class="m-text">Первый сервис в Украине, с которым сотрудники могут получить <br>
             заработанную зарплату в любой удобный день.
-          </div>
+          </p>
         </div>
         <div class="benefits__target d-flex justify-content-center">
-          <div class="benefits__target-employees">
-            <div class="m-text">Для сотрудника</div>
+          <div class="employees">
+            <p class="m-text">Для сотрудника</p>
             <div class="horizontal-line"></div>
           </div>
-          <div class="benefits__target-employer">
-            <div class="m-text">Для работодателя</div>
+          <div class="employer">
+            <p class="m-text">Для работодателя</p>
             <div class="horizontal-line"></div>
           </div>
         </div>
@@ -142,9 +147,9 @@
           <div class="row flex flex-row gap-3">
             <div class="col">
               <div class="card-border benefits__credit-card card h-100 text-center">
-                <div class="card-body">
+                <div class="card-body p-4">
                   <img src="/img/card.svg" alt="card">
-                  <h5 class="card-title ml-text">Доступ к деньгам</h5>
+                  <h4 class="card-title ml-text">Доступ к деньгам</h4>
                   <p class="card-text m-text">Вы можете просматривать свой доступный баланс на зарплатном счету и
                     перевести
                     необходимую сумму на свою карту</p>
@@ -153,9 +158,9 @@
             </div>
             <div class="col">
               <div class="card-border benefits__statistic card h-100 text-center">
-                <div class="card-body">
+                <div class="card-body p-4">
                   <img src="/img/statistic-red.svg" alt="statistic-red">
-                  <h5 class="card-title ml-text">Статистика дохода</h5>
+                  <h4 class="card-title ml-text">Статистика дохода</h4>
                   <p class="card-text m-text">Детальная статистика начислений зарплаты и снятия средств позволяет
                     понимать
                     свои финансовые потоки</p>
@@ -164,9 +169,9 @@
             </div>
             <div class="col">
               <div class="card-border benefits__check card h-100 text-center">
-                <div class="card-body">
+                <div class="card-body p-4">
                   <img src="/img/check.svg" alt="check">
-                  <h5 class="card-title ml-text">Доступ везде и всегда</h5>
+                  <h4 class="card-title ml-text">Доступ везде и всегда</h4>
                   <p class="card-text m-text">“Зарплата каждый день” - это онлайн сервис. Вам необходимо только
                     подключение
                     к интернету, компьютер или смартфон</p>
@@ -175,23 +180,24 @@
             </div>
           </div>
         </div>
-        <div class="joining d-flex flex-column justify-content-center mt-4">
+        <div class="joining align-items-center mt-4">
           <div class="mx-auto text-center">
             <button class="btn btn-blue">Ваша компания еще не подключена?
             </button>
-            <div class="l-text">Ускорьте процесс подключения вашей <br> компании к сервису "Зарплата каждый
+            <h3 class="l-text">Ускорьте процесс подключения вашей <br> компании к сервису "Зарплата каждый
               день"
-            </div>
+            </h3>
             <button class="joining__btn btn btn-dark">Оставить заявку</button>
             <p class="s-text">Уже более 8 000 сотрудников оставили заявку</p>
           </div>
         </div>
       </div>
     </section>
+
     <section class="q-and-a" id="q-and-a">
       <div class="container">
         <div class="d-flex flex-column align-items-center">
-          <h3 class="xl-text">Вопросы и ответы</h3>
+          <h2 class="xl-text">Вопросы и ответы</h2>
           <div class="accordion w-100" id="accordion">
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingOne">
@@ -245,12 +251,12 @@
               </div>
             </div>
           </div>
-          <div class="q-and-a__email sm-text">Если у вас остались вопросы пишите нам <a class="no-underline"
+          <div class="q-and-a__email sm-text">Если у вас остались вопросы пишите нам <a class="remove-link-styles"
             href="mailto:help@ewa.com">help@ewa.com</a>
           </div>
           <div class="text-center m-3">
-            <div class="xl-text">Узнайте больше</div>
-            <div class="m-text">Задавайте любые вопросы нашим специалистам <br> удобным для вас способом</div>
+            <h2 class="xl-text">Узнайте больше</h2>
+            <p class="m-text">Задавайте любые вопросы нашим специалистам <br> удобным для вас способом</p>
           </div>
           <div class="row flex flex-row gap-3">
             <div class="col">
@@ -281,11 +287,69 @@
         </div>
       </div>
     </section>
+
+    <section class="contact" id="contact">
+      <div class="container">
+        <div class="text-center">
+          <img class="contact__img" src="/img/icon.svg" alt="icon">
+          <h2 class="xl-text">Контакты</h2>
+          <p class="m-text">Первый сервис в Украине, с которым сотрудники могут получить <br> зарплату в любом месте и
+            в
+            любое время.
+          </p>
+        </div>
+        <div class="container contact__cards">
+          <div class="row justify-content-center">
+            <div class="col-md-6 d-flex">
+              <div class="card flex-fill mb-3 card-border text-center">
+                <div class="card-body">
+                  <div class="employees">
+                    <p class="m-text">Для сотрудника</p>
+                    <div class="horizontal-line"></div>
+                  </div>
+                  <img class="contact__email-img" src="/img/email-contact.svg" alt="email-contact">
+                  <div class="contact__email">
+                    <a class="remove-link-styles mb-2" href="mailto:help@ewa.com">help@ewa.com</a>
+                    <p class="s-text">Пишите нам на email</p>
+                  </div>
+                  <img src="/img/phone-contact.svg" alt="phone-contact">
+                  <div class="contact__phone">
+                    <a class="remove-link-styles mb-2" href="tel:+380447772250">+380 (44) 777 22 50</a>
+                    <p class="s-text">с 9.00 до 21.00</p>
+                  </div>
+                  <button class="contact__btn btn btn-green" type="button">Войти</button>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 d-flex">
+              <div class="card flex-fill mb-3 card-border text-center">
+                <div class="card-body">
+                  <div class="employer">
+                    <p class="m-text">Для работодателя</p>
+                    <div class="horizontal-line"></div>
+                  </div>
+                  <img class="contact__email-img" src="/img/email-contact.svg" alt="email-contact">
+                  <div class="contact__email">
+                    <a class="remove-link-styles mb-2" href="mailto:partner@ewa.com">partner@ewa.com</a>
+                    <p class="s-text">Пишите нам на email</p>
+                  </div>
+                  <img src="/img/phone-contact.svg" alt="phone-contact">
+                  <div class="contact__phone">
+                    <a class="remove-link-styles mb-2" href="tel:+380445021160">+380 (44) 502 11 60</a>
+                    <p class="s-text">с 9.00 до 21.00</p>
+                  </div>
+                  <button class="contact__btn btn btn-dark" type="button">Подключиться</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
+
   <footer class="footer">
-    <div class="container">
-      <div class="text-center">© 2021. Зарплата каждый день</div>
-    </div>
+    <p class="text-center s-text">© 2021. Зарплата каждый день</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
