--- a/index.html
+++ b/index.html
@@ -19,14 +19,12 @@
 
   <header class="header">
     <div class="container">
-      <nav class="navbar">
-        <ul class="nav justify-content-center align-items-center">
-          <li class="nav-item">
-            <a class="nav-link s-text" href="#">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <div class="d-flex align-items-center justify-content-center">
+            <a class="navbar-brand" href="#">
               <img src="/img/icon.svg" alt="icon">
             </a>
-          </li>
-          <li class="nav-item">
             <div class="dropdown">
               <button class="btn btn-language dropdown-toggle-split" type="button" id="dropdownMenuButton1"
                 data-bs-toggle="dropdown" aria-expanded="false">
@@ -37,46 +35,68 @@
                 <li><a class="dropdown-item" href="#">EN</a></li>
               </ul>
             </div>
-          </li>
-        </ul>
-        <ul class="nav justify-content-center align-items-center">
-          <li class="nav-item">
-            <a class="nav-link" href="#works">Как это работает</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#benefits">Преимущества</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#q-and-a">Вопросы и ответы</a>
-          </li>
-        </ul>
-        <button class="btn btn-green" type="button">Войти</button>
+          </div>
+          <button class="navbar-toggler" type="button" data-bs-toggle="modal" data-bs-target="#nav-burger">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav align-items-center">
+              <li class="nav-item">
+                <a class="nav-link" href="#works">Как это работает</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#benefits">Преимущества</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#q-and-a">Вопросы и ответы</a>
+              </li>
+            </ul>
+            <button class="btn btn-green" type="button">Войти</button>
+          </div>
+        </div>
       </nav>
+    </div>
+    <div class="modal fade" id="nav-burger" tabindex="-1" role="dialog">
+      <div class="modal-dialog modal-size">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+
+          </div>
+          <div class="modal-footer d-flex flex-column">
+            <p class="s-text">Для сотрудника</p>
+            <button type="button" class="btn btn-green mb-s">Войти</button>
+          </div>
+        </div>
+      </div>
     </div>
   </header>
 
   <main>
     <section class="salary" id="salary">
       <div class="container">
-        <div class="row">
-          <div class="col justify-content-start">
-            <div class="salary__about mb-m">
+        <div class="d-flex salary__direction">
+          <div class="salary__about">
+            <div class="salary__title mb-m">
               <h1 class="salary__name mb-m">Зарплата <br> каждый день</h1>
               <p class="m-text">Первый сервис в Украине, с которым сотрудники могут получать
-                зарплату в
-                любом
-                месте и в любое время.
+                зарплату в любом месте и в любое время.
               </p>
             </div>
-            <button class="btn btn-green">Войти</button>
-            <div class="salary__visa d-flex">
-              <div class="salary__visa-text s-text d-flex align-items-center">Сервис создан при поддержке
+            <div class="salary__sign-in">
+              <button class="btn btn-green">Войти</button>
+              <div class="salary__visa d-flex">
+                <div class="salary__visa-text s-text d-flex align-items-center">Сервис создан при поддержке
+                </div>
+                <img src="/img/visa-logo.svg" alt="visa-logo">
               </div>
-              <img src="/img/visa-logo.svg" alt="visa-logo">
             </div>
           </div>
-          <div class="col salary__image">
-            <img src="/img/about-project-image.svg" alt="about-project-image" class="col justify-content-end">
+          <div class="salary__image mb-l">
+            <img class="salary__image-visibility-1" src="/img/about-project-image.svg" alt="about-project-image">
+            <img class="salary__image-visibility-2" src="/img/about-project-mobile.svg" alt="about-project-image">
           </div>
         </div>
       </div>
